Update README.md and packages

--- a/examples/mysql-stack/stack.yaml
+++ b/examples/mysql-stack/stack.yaml
@@ -1,3 +1,5 @@
+# Copyright 2021 Canonical Ltd.
+# See LICENSE file for licensing details.
 ---
 name: mysql-stack
 description: "Stack for my MySQL Database"
