--- a/examples/wordpress-stack/stack.yaml
+++ b/examples/wordpress-stack/stack.yaml
@@ -1,3 +1,5 @@
+# Copyright 2021 Canonical Ltd.
+# See LICENSE file for licensing details.
 ---
 name: wordpress-stack
 description: "Stack for a Wordpress with DB"
