--- a/examples/super-website-stack/stack.yaml
+++ b/examples/super-website-stack/stack.yaml
@@ -1,17 +1,13 @@
+# Copyright 2021 Canonical Ltd.
+# See LICENSE file for licensing details.
 ---
 name: website-stack
 description: "Stack for my super website"
 components:
   db:
     stack: ../mysql-stack/
-  db2:
-    stack: ../mysql-embed-stack/
   wp:
-    stack: ../wordpress-stack/
-  wp2:
     stack: ../wordpress-stack/
 relations:
   - requirer: wp:db
     provider: db:db
-  - requirer: wp2:db
-    provider: db2:db
