Add charmcraft-stack and improve status
Changed the examples:
 - Remove mysql and wordpress stacks
 - Add nginx ingress integrator
 - Add hello-kubecon in the website-stack

--- a/examples/supersite.yaml
+++ b/examples/supersite.yaml
@@ -1,8 +1,6 @@
 # Copyright 2021 Canonical Ltd.
 # See LICENSE file for licensing details.
-# default-model:
+default-model: web
 components:
-  db:
-    model: database
-  wp:
-    model: wordpress
+  lma:
+    model: lma
