--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 # Copyright 2021 Canonical Ltd.
 # See LICENSE file for licensing details.
-click==8.0.1
+click==8.0.3
     # via -r requirements.in
-pyyaml==5.4.1
+pyyaml==6.0
+    # via -r requirements.in
+tabulate==0.8.9
     # via -r requirements.in
