--- a/examples/website/stack.yaml
+++ b/examples/website/stack.yaml
@@ -2,7 +2,7 @@
 # See LICENSE file for licensing details.
 ---
 name: website
-description: "Stack with mysql and wordpress"
+description: "Stack with hello kubecon"
 components:
   site:
     charm: hello-kubecon
